--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div id="divForm">
+<div id="divLogin">
 <div class="col-sm-4 offset-sm-4" id="formLogin">
   <h2 class="text-center">Comece a planejar!</h2>
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit(registerForm.value)">
