--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,27 @@
-html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; line-height: 1.85;}
+/* Shared */
+html,body,h1,h2,h4,h5 {font-family: "Raleway", sans-serif; line-height: 1.85;}
+h3 {font-family: "Raleway", sans-serif; line-height: 2.5;}
+
+.icon{
+  width:4.5%;
+}
+a{color:#290074;text-decoration: none;}
+a:hover{color:#ffbd59; }
+
+
+.footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+}
+.jumbotron{
+    padding:1rem;
+}
+
+/* End of styling Shared */
+
+
+/* Styling the Dashboard page */
 .w3-left{
   margin-right: 3%;
 }
@@ -6,11 +29,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; line-height: 1.85;
   margin: 10%;
 }
 
-.bg-success{
+.bg-purple{
   margin: 10%;
+  background-color: #9c27b0;
 }
 
-.bg-primary{
+.bg-warning{
   margin: 10%;
 }
 
@@ -30,47 +54,22 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif; line-height: 1.85;
   align-content: flex-end;
 }
 
-.fa-dashboard{
-  margin-left: 10px;
-}
-
 .toolbar-spacer {
   flex: 1 1 auto;
 }
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
 .panel{
-  background-color: grey;
+  background-color: light-grey;
+  border:1px solid #ccc;
   min-height: 20px;
+  margin: .05%;
+  width: 463px ;
 }
-
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-/*  */
-.icon{
-	width:4.5%;
-}
-/*  */
+/* End of styling Dashboard page */
 
 
 /* Styling the login page  */
 div#divForm{
-	 background: url('../assets/bg.png') no-repeat center center fixed;
+  background: url('../assets/bg.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -78,18 +77,14 @@ div#divForm{
   font-family:'Raleway','Arial', sans-serif;
 }
 
-#divForm{
-	background: rgba(0,0,0,.2);
-	width:100%;
-	height:100%;
-	position: absolute;
-	top:0;
-	left:0;
-	transition:all .3s ease;}
-
-
-a{color:#290074;text-decoration: none;}
-a:hover{color:#ffbd59; }
+#divLogin{
+  background: rgba(0,0,0,.2);
+  width:100%;
+  height:100%;
+  position: absolute;
+  top:0;
+  left:0;
+  transition:all .3s ease;}
 
 
 div#formLogin{
@@ -103,7 +98,6 @@ div#formLogin{
   padding:3%;
   left:35%;
   top:40%;
-  /* margin-left:-180px; */
   margin-top:-15%;
 }
 
@@ -135,23 +129,23 @@ div.form-group p.formLabel {
   transition:all .4s ease;
   color:#bbb;}
 
-  input[type="submit"].login{
-  	float:right;
-  	width: 180%;
-  	height: 30px;
-  	-moz-border-radius: 19px;
-  	-webkit-border-radius: 19px;
-  	border-radius: 19px;
-  	-moz-background-clip: padding;
-  	-webkit-background-clip: padding-box;
-  	background-clip: padding-box;
-  	background-color: #290074;
-  	border:1px solid #290074;
-  	border:none;
-  	color: #fff;
-  	font-weight: bold;
-    margin-right: 43%;
-  }
+input[type="submit"].login{
+  float:right;
+  width: 180%;
+  height: 30px;
+  -moz-border-radius: 19px;
+  -webkit-border-radius: 19px;
+  border-radius: 19px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  background-color: #290074;
+  border:1px solid #290074;
+  border:none;
+  color: #fff;
+  font-weight: bold;
+  margin-right: 43%;
+}
 input[type="submit"].login:hover{background-color: #fff; border:1px solid #290074; color:#290074; cursor:pointer;}
 input[type="submit"].login:focus{outline: none;}
 
@@ -161,35 +155,59 @@ input[type="submit"].login:focus{outline: none;}
 
 div.logo{text-align: center; margin: 20px 20px 30px 20px; fill: #566375;}
 div.logo img{
-	width:100%;
-	height:100%;
+  width:100%;
+  height:100%;
 }
-  /* End of styling loggin page */
+/* End of styling loggin page */
 
-  /*  Styling the Register page */
-  input[type="submit"].register{
-  	float:right;
-  	width: 180%;
-  	height: 30px;
-  	-moz-border-radius: 19px;
-  	-webkit-border-radius: 19px;
-  	border-radius: 19px;
-  	-moz-background-clip: padding;
-  	-webkit-background-clip: padding-box;
-  	background-clip: padding-box;
-  	background-color: #290074;
-  	border:1px solid #290074;
-  	border:none;
-  	color: #fff;
-  	font-weight: bold;
-    margin-right: 43%;
-  }
-  input[type="submit"].register:hover{background-color: #fff; border:1px solid #290074; color:#290074; cursor:pointer;}
-  input[type="submit"].register:focus{outline: none;}
+/*  Styling the Register page */
+input[type="submit"].register{
+  float:right;
+  width: 180%;
+  height: 30px;
+  -moz-border-radius: 19px;
+  -webkit-border-radius: 19px;
+  border-radius: 19px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  background-color: #290074;
+  border:1px solid #290074;
+  border:none;
+  color: #fff;
+  font-weight: bold;
+  margin-right: 43%;
+}
+input[type="submit"].register:hover{background-color: #fff; border:1px solid #290074; color:#290074; cursor:pointer;}
+input[type="submit"].register:focus{outline: none;}
 
-  /* End of styling Register page */
+/* End of styling Register page */
 
 /* Styling the Add page */
+div#divAdd{
+  background: rgba(221,221,221,0.8);
+  /* -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; */
+  height: auto;
+  font-family:'Raleway','Arial', sans-serif;
+}
+div#formAdd{
+  position: absolute;
+  width:40%;
+  /* height:50%; */
+  height:auto;
+  background-color: #fff;
+  margin:auto;
+  border-radius: 3%;
+  padding:3%;
+  left:35%;
+  top:40%;
+  margin-bottom:10px;
+  margin-top:-15%;
+}
+
 .slider {
   -webkit-appearance: none;
   width: 95%;
@@ -221,7 +239,35 @@ div.logo img{
   cursor: pointer;
 }
 
- .slider-label{
+.slider-label{
 
- }
+}
 /* End of styling Add page  */
+
+/* Styling the Sidenav page */
+.example-sidenav-content {
+  display: inline;
+  height: 100vh;
+  align-items: baseline;
+  justify-content: flex-end;
+}
+
+.example-sidenav {
+  background-color: #290074;
+}
+.active{
+  background-color:rgba(221,221,221,0.6);
+  /* rgba(9, 30, 66, 0.25); */
+  color:white;
+}
+
+.sidenav-item{
+    color: white;
+    font-size:20px;
+    align-items: baseline;
+}
+
+.icon{
+  color: white;
+}
+/* End of styling Sidenav page */
