bug scoreAcumulado fixed

--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="card textcenter mt-3" [ngClass]="{'add-appointment': showForm}"> -->
 <!-- <div id="divAdd"> -->
   <div class="col-sm-4 offset-sm-4" id="formAdd">
-    <a class="pull-right" [routerLink]="['/painel']"><i class="fa fa-times"></i></a>
+    <a class="pull-right" routerLink="/painel"><i class="fa fa-times"></i></a>
     <h2> Atividade</h2>
 
     <form id="atividadeForm" name="atividadeForm" novalidate
@@ -49,7 +49,7 @@
     </div>
 
     <div>
-      <a class="pull-left" [routerLink]="['/painel']"><small>Cancel</small></a>
+      <a class="pull-left" routerLink="/painel"><small>Cancel</small></a>
     </div>
     <div class="form-group w3-right">
       <input type="submit" class="register pull-right" value="Adicionar">
