--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -30,7 +30,7 @@
               *ngIf="atividade.id" type="button">Delete</button>
       <button mat-raised-button color="secondary" (click)="complete(atividade.id)"
               *ngIf="atividade.id" type="button">Complete</button>
-      <a mat-button routerLink="/list">Cancel</a>
+      <a mat-button routerLink="/painel">Cancel</a>
     </mat-card-actions>
   </form>
 </mat-card>
