--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,7 +15,7 @@ a:hover{color:#ffbd59; }
     width:100%;
 }
 .jumbotron{
-    padding:1rem;
+    padding:1rem 2rem;
 }
 
 /* End of styling Shared */
@@ -68,7 +68,7 @@ a:hover{color:#ffbd59; }
 
 
 /* Styling the login page  */
-div#divForm{
+div#divLogin{
   background: url('../assets/bg.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -257,7 +257,6 @@ div#formAdd{
 }
 .active{
   background-color:rgba(221,221,221,0.6);
-  /* rgba(9, 30, 66, 0.25); */
   color:white;
 }
 
